--- a/drump/assets/style.scss
+++ b/drump/assets/style.scss
@@ -154,7 +154,7 @@ html {
 
     .band {
         h1 {
-            top: 0;
+            top: 2rem;
         }
     }
 }
@@ -179,6 +179,23 @@ html {
 @media(max-width: 300px) {
     html {
         font-size: 50%;
+    }
+
+}
+
+@media(max-height: 400px) {
+    html {
+        font-size: 60%;
+    }
+
+    .band {
+        width: 100%;
+        height: 100%;
+
+        h1 {
+            position: relative;
+            top: 2rem;
+        }
     }
 
 }
