--- a/drump/assets/style.scss
+++ b/drump/assets/style.scss
@@ -146,8 +146,7 @@ html {
 }
 
 
-
-@media(max-width: 991px) {
+@media only screen and (max-width: 991px) {
     html {
         font-size: 80%;
     }
@@ -159,7 +158,7 @@ html {
     }
 }
 
-@media(max-width: 575px) {
+@media only screen and (max-width: 575px) {
     html {
         font-size: 70%;
     }
@@ -169,21 +168,21 @@ html {
     }
 }
 
-@media(max-width: 400px) {
+@media only screen and (max-width: 400px) {
     html {
         font-size: 60%;
     }
 
 }
 
-@media(max-width: 300px) {
+@media only screen and (max-width: 300px) {
     html {
         font-size: 50%;
     }
 
 }
 
-@media(max-height: 400px) {
+@media only screen and (max-height: 400px) {
     html {
         font-size: 60%;
     }
