--- a/drump/assets/style.css
+++ b/drump/assets/style.css
@@ -157,13 +157,16 @@ html {
   background-blend-mode: exclusion;
 }
 
-@media (max-width: 991px) {
+@media only screen and (max-width: 991px) {
   html {
     font-size: 80%;
   }
+  .band h1 {
+    top: 2rem;
+  }
 }
 
-@media (max-width: 575px) {
+@media only screen and (max-width: 575px) {
   html {
     font-size: 70%;
   }
@@ -173,13 +176,13 @@ html {
   }
 }
 
-@media (max-width: 400px) {
+@media only screen and (max-width: 400px) {
   html {
     font-size: 60%;
   }
 }
 
-@media (max-width: 300px) {
+@media only screen and (max-width: 300px) {
   html {
     font-size: 50%;
   }
